--- a/src/app/shared/components/deals-cards/deals-cards.component.scss
+++ b/src/app/shared/components/deals-cards/deals-cards.component.scss
@@ -1,13 +1,11 @@
-.sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 20px;
-}
-
-.bgclass {
-    background-image: linear-gradient(to right, #22c1c3, #fdbb2d);
-}
-
+// .sticky {
+//     position: -webkit-sticky;
+//     position: sticky;
+//     top: 20px;
+// }
+// .bgclass {
+//     background-image: linear-gradient(to right, #22c1c3, #fdbb2d);
+// }
 .guide-contain {
     margin-left: 110px !important;
     margin-right: 0 !important;
@@ -37,4 +35,11 @@
     position: absolute;
     bottom: -2px;
     left: 70px;
+}
+
+@media (min-width: 1200px) {
+    .star {
+        font-size: 12px;
+        font-size: 0.8vw;
+    }
 }
