--- a/src/app/modules/tourists/pages/search-result-page/search-result-page.component.scss
+++ b/src/app/modules/tourists/pages/search-result-page/search-result-page.component.scss
@@ -132,3 +132,11 @@ mdb-card-text div {
     background: linear-gradient(45deg, #05abe0 0%, #8200f4 100%);
     -ms-filter: "progid: DXImageTransform.Microsoft.gradient( startColorstr='#05abe0', endColorstr='#8200f4', GradientType=1)";
 }
+
+.example-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
