create deals complete

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-sm navbar-dark black" [containerInside]="false" >
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark black" [containerInside]="false" >
     <!-- Navbar brand -->
     <mdb-navbar-brand>
         <a *ngIf="!jwtService.getToken()" class="navbar-brand" [routerLink]="['/']" routerLinkActive="active">
