--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -41,7 +41,7 @@
 
 
 <!-- /table -->
-<mdb-card class="booking-card">
+<!-- <mdb-card class="booking-card">
     <mdb-card-body>
         <mdb-card-title>
             <mdb-badge class="float-right amy-crisp-gradient" default="true">PERSONALIZED TOUR</mdb-badge>
@@ -91,7 +91,6 @@
                 </div>
 
             </div>
-            <!-- <div>Booking Date: March 25,2020</div> -->
         </div>
 
     </mdb-card-body>
@@ -99,16 +98,16 @@
         <a href="#!">View more</a>
         <button class="float-right footer-btn" style="margin: auto; " color="danger" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>CANCEL BOOKING</b></button>
     </mdb-card-footer>
-</mdb-card>
+</mdb-card> -->
 
 <!-- <mdb-card> -->
 <!--Card content-->
 
 <!--  -->
 
-<mdb-card class="my-3" *ngFor="let booking of bookingsList">
+<!-- <mdb-card class="my-3" *ngFor="let booking of bookingsList">
     <mdb-card>
-        <mdb-card-body>
+        <mdb-card-body class="m-0 p-0">
             <div class="row">
                 <div class="col-md-9">
                     <mdb-card-title>
@@ -116,18 +115,20 @@
                             <mdb-icon fas icon="suitcase" style="color: rgba(233, 30, 99, 0.7);"></mdb-icon> &nbsp; {{booking.guideId?.city}}, India with {{booking.guideId?.name}}</h4>
                     </mdb-card-title>
                 </div>
-                <div class="col-md-3" style="padding: 0;">
-                    <button mdbBtn type="button" size="sm" color="pink" style="margin-top: -6px;" (click)="contactGuide(booking.guideId.email)" mdbWavesEffect>Contact Guide</button>
-                </div>
+
 
             </div>
-            <!--Text-->
+
             <mdb-card-text>
                 Approved booking by the guide under Voils <a href="">terms and condition</a> contact your guide for any booking related quary.
 
                 <p>{{booking.places.toString()}}</p>
-                <p class="mb-0"><a style="color: rgba(233, 30, 99, 0.7);" (click)="test1.toggle()">View more</a></p>
-
+                <div class="row m-0 p-0">
+                <button mdbBtn class="col-3" type="button" size="sm" color="pink" style="margin-top: -6px;" (click)="test1.toggle()" mdbWavesEffect>View More</button>
+                <button mdbBtn class="col-3" type="button" size="sm" color="pink" style="margin-top: -6px;" (click)="contactGuide(booking.guideId.email)" mdbWavesEffect>Contact</button>
+                <button mdbBtn class="col-3" type="button" size="sm" color="pink" style="margin-top: -6px;"  mdbWavesEffect>Start Tour</button>
+                <button mdbBtn class="col-3" type="button" size="sm" color="pink" style="margin-top: -6px;"  mdbWavesEffect>Cancle</button>
+</div>
             </mdb-card-text>
 
 
@@ -136,7 +137,6 @@
     <div mdbCollapse [isCollapsed]="true" #test1="bs-collapse">
         <mdb-card>
             <mdb-card-body>
-                <!--Text-->
                 <mdb-card-text>
                     <div class="row">
                         <div class="col-md-4">
@@ -168,4 +168,98 @@
             </mdb-card-body>
         </mdb-card>
     </div>
+</mdb-card> -->
+<mdb-card class="my-3">
+    <mdb-card>
+        <mdb-card-body class="m-0 p-0">
+            <div class="row">
+                <div class="col-md-9">
+                    <mdb-card-title>
+                        <h4 class="m-3">
+                            <mdb-icon fas icon="suitcase" style="color: rgba(233, 30, 99, 0.7);"></mdb-icon> &nbsp; City, India with Name</h4>
+                    </mdb-card-title>
+                </div>
+
+
+            </div>
+
+            <mdb-card-text class="p-2">
+              <div class="row">
+                <div class="col-6 col-md-3">
+                    <h5>Booking Date</h5> 12-3-23
+                </div>
+                <div class="col-6 col-md-3">
+                    <h5>Duration</h5>4
+                </div>
+                <div class="col-6 col-md-3">
+                    <h5>Price</h5> INR 641
+                </div>
+                <div class="col-6 col-md-3">
+                  <h5>Group</h5> Family
+              </div>
+            </div>
+
+            </mdb-card-text>
+<div class="row card-footer text-muted text-center">
+                <button mdbBtn class="col-5 col-md-3 p-2" type="button" size="sm" color="pink"  (click)="test1.toggle()" mdbWavesEffect>View More</button>
+                <button mdbBtn class="col-5 col-md-2 p-2" type="button" size="sm" color="pink"  mdbWavesEffect>Contact</button>
+                <button mdbBtn class="col-5 col-md-2 p-2" type="button" size="sm" color="pink"   mdbWavesEffect>Start Tour</button>
+                <button mdbBtn class="col-5 col-md-3  p-2" type="button" size="sm" color="pink" (click)="open(content)" mdbWavesEffect>Cancle</button>
+</div>
+
+        </mdb-card-body>
+    </mdb-card>
+    <div mdbCollapse [isCollapsed]="true" #test1="bs-collapse">
+        <mdb-card>
+            <mdb-card-body>
+                <mdb-card-text>
+                    <div class="row">
+                        <div class="col-6 col-md-4 mb-2">
+                            <h5>Booking date</h5> 12-3-23
+                        </div>
+                        <div class="col-6 col-md-4 mb-2">
+                            <h5>Start-Date</h5>12-4-23
+                        </div>
+                        <div class="col-6 col-md-4 mb-2">
+                            <h5>Group Type</h5>Family
+                        </div>
+
+
+                        <div class="col-6 col-md-4 mb-2">
+                            <h5>Guide</h5> Ekta
+                        </div>
+                        <div class="col-6 col-md-4 mb-2">
+                            <h5>Price</h5> INR 223
+                        </div>
+                        <div class="col-6 col-md-4 mb-2">
+                            <h5>People</h5> <i class="fas fa-user-friends"></i> 3
+                        </div>
+                        <div class="col-6 col-md-4 mb-2">
+                          <h5>Duration</h5>5 Days
+                      </div>
+
+                    </div>
+
+                </mdb-card-text>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
 </mdb-card>
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Cancle Booking</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="md-form">
+      <textarea class="md-textarea form-control" rows="3" id="input_text" type="text"mdbInput></textarea>
+      <label for="input_text">Tell us why</label>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Close</button>
+    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Submit</button>
+  </div>
+</ng-template>
