--- a/src/app/modules/tourists/components/bookings/bookings.component.scss
+++ b/src/app/modules/tourists/components/bookings/bookings.component.scss
@@ -16,3 +16,12 @@
 //     }
 // }
 
+.col {
+    padding: 6px;
+}
+
+table.table th, table.table td {
+    padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+  }
+
