--- a/src/app/modules/tourists/components/histories/histories.component.scss
+++ b/src/app/modules/tourists/components/histories/histories.component.scss
@@ -15,3 +15,11 @@
     background-color: rgba(255, 153, 0, 0.322);
 
 }
+.col {
+    padding: 6px;
+}
+
+table.table th, table.table td {
+    padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+  }
