--- a/src/app/modules/tourists/components/requests/requests.component.scss
+++ b/src/app/modules/tourists/components/requests/requests.component.scss
@@ -25,3 +25,12 @@ mdb-card-text div {
 .request-card {
     width: 50%;
 }
+
+.col {
+    padding: 6px;
+}
+
+table.table th, table.table td {
+    padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+  }
