--- a/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
+++ b/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
@@ -1,6 +1,6 @@
 <div class="row all">
 
-    <div class="col-12 col-md-8 p-3" style="position: relative; overflow:hidden;">
+    <div class="col-12 col-lg-9 p-3" style="position: relative; overflow:hidden;">
         <div class="container-fluid px-1 px-md-5">
             <div class="card">
                 <div class="row  check pb-0 card-body">
@@ -24,8 +24,8 @@
                     </div>
                 </div>
                 <!-- <hr class="card-body mt-0"> -->
-                <div class="row card-body">
-                    <div class="col-12">
+                <div class="row card-body pt-2">
+                    <div class="col-12 px-1">
                         <router-outlet></router-outlet>
                     </div>
 
@@ -35,7 +35,7 @@
     </div>
 
 
-    <div class="col-3 mt-5 d-none d-md-block">
+    <div class="col-3 mt-5 d-none d-lg-block text-center">
         <div class="card side-text">
             <div class="card-body ">
                 <div>
