--- a/src/app/shared/components/chats/chats.component.html
+++ b/src/app/shared/components/chats/chats.component.html
@@ -17,14 +17,13 @@
     </div>
   </div> -->
 
-  <div class="col-sm-12">
-    <div class="row py-3 mx-0" style="background-color : grey">
+  <div class="col-sm-12 p-0">
+    <div class="row px-0 py-3 mx-0" style="background-color : #007bff; color: #b7e8eb;">
       <div class="col-sm-1">
-        <img src="http://placehold.it/50x50" class="circle">
+        <img src="http://placehold.it/50x50" class="circle" style="border-radius: 50%;">
       </div>
       <div class="col-sm-11">
-        <span style="font-size: 25px;"><b>{{reciever?.name}}</b></span>
-        <p class="isOnline mt-1 mb-0">Online</p>
+        <span style="font-size: 30px;"><b>Pinki</b></span>
       </div>
     </div>
   </div>
@@ -52,7 +51,7 @@
     </div>
   </div>
 
-  <div class="col-sm-12">
+  <div class="col-sm-12 mb-0">
     <div class="row">
       <div class="col-sm-10 px-0">
         <form>
