--- a/src/app/shared/components/chats/chats.component.scss
+++ b/src/app/shared/components/chats/chats.component.scss
@@ -228,3 +228,11 @@ body{
   margin: 0;
   padding: 0;
 }
+.sendbox{
+  display: flex;
+flex-direction: column;
+}
+.sendbox1{
+  margin-top: auto;
+
+}
