--- a/src/app/shared/components/chats/chats.component.html
+++ b/src/app/shared/components/chats/chats.component.html
@@ -51,8 +51,8 @@
     </div>
   </div>
 
-  <div class="col-sm-12 mb-0">
-    <div class="row">
+  <div class="col-sm-12 sendbox mb-0">
+    <div class="row sendbox1">
       <div class="col-sm-10 px-0">
         <form>
           <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
